# argus

./: .gitignore  LICENSE.txt  README.md
argus/: CMakeLists.txt  package.xml
argus_common/: CMakeLists.txt  package.xml
argus_common/src/: PoseSE2.cpp  PoseSE3.cpp  YamlUtils.cpp
argus_examples/: CMakeLists.txt  package.xml
argus_msgs/: CMakeLists.txt  package.xml
argus_msgs/msg/: CompactOdometry.msg  CompactOdometryArray.msg  EstimatePerformance.msg  FiducialDetection.msg  FilterStepInfo.msg  FilterUpdate.msg  FilterUpdateBounds.msg  FloatVectorStamped.msg  ImageFiducialDetections.msg  MatrixFloat64.msg  OdometryArray.msg  OdometryBounds.msg  PoseWithCompactCovariance.msg  PredictionFeatures.msg  RelativePose.msg  RelativePoseWithCovariance.msg  SymmetricFloat64.msg  TagDetection.msg  TagDetectionsStamped.msg  TargetState.msg  TargetStates.msg  TwistWithCompactCovariance.msg
atags/: CMakeLists.txt  README.md  atags_nodelet.xml  debug.launch  package.xml  test_multi.launch
atags/launch/: test_detector.launch
atags/msg/: TagDetection.msg
atags/nodes/: AtagDetectorNode.cpp  AtagRegistrar.cpp  DummyCameraInfoNode.cpp  GazingAtagDetector.cpp  SyncingAtagDetector.cpp  atag_detector_node.cpp  atag_detector_nodelet.cpp
atags/src/: AtagCommon.cpp  AtagDetector.cpp
atags/tests/: test_registrar.launch
broadcast/: CMakeLists.txt  README.md  package.xml  setup.py
broadcast/msg/: StampedFeatures.msg
broadcast/nodes/: belief_state_broadcaster.cpp  broadcast_combiner.cpp  broadcast_listener.cpp
broadcast/scripts/: ConstantFeatures.py
broadcast/src/: BroadcastCommon.cpp  BroadcastInfoManager.cpp  BroadcastMultiReceiver.cpp  BroadcastReceiver.cpp  BroadcastTransmitter.cpp
broadcast/srv/: QueryFeatures.srv
camera_array/: CMakeLists.txt  README.md  camera_array_nodelet.xml  package.xml
camera_array/msg/: CameraArrayInfo.msg  CameraArrayStatus.msg  CameraStatus.msg
camera_array/nodes/: array_visualizer.cpp  camera_array_manager.cpp  camera_array_nodelet.cpp  camera_array_param_manager.cpp
camera_array/src/: ArrayUtils.cpp  CameraArray.cpp  CameraArrayCalibrationParsers.cpp  CameraArrayInfoManager.cpp  CameraArrayManager.cpp  ExpectationPolicy.cpp  FiducialDetectionModel.cpp  FiducialRewardFunction.cpp  PinholeCameraArrayModel.cpp  PolicyArrayManager.cpp  PolicyManager.cpp  RandomArrayManager.cpp  SystemDistributions.cpp  SystemModels.cpp  SystemStates.cpp
camera_array/srv/: DisableArrayCamera.srv  GetCameraArrayInfo.srv  ListArrayCameras.srv  SetCameraArrayInfo.srv
camplex/: CMakeLists.txt  README.md  package.xml
camplex/launch/: record_video.launch
camplex/nodes/: camera_calibrator_node.cpp  camera_node.cpp  camera_nodelet.cpp  checkerboard_detector_node.cpp  checkerboard_registrar.cpp  fiducial_pose_estimator.cpp  recorder_node.cpp  resize_node.cpp  split_camera_node.cpp  undistortion_node.cpp  video_recorder.cpp  viewer_node.cpp
camplex/src/: CameraCalibration.cpp  CameraCalibrator.cpp  CameraDriver.cpp  CameraTypes.cpp  CamplexCommon.cpp  DriverNode.cpp  FiducialArray.cpp  FiducialCalibrationParsers.cpp  FiducialCommon.cpp  FiducialInfoManager.cpp  FiducialPoseEstimator.cpp  FiducialVisualizer.cpp  SplitStereoDriverNode.cpp
camplex/srv/: CaptureFrames.srv  GetCameraInfo.srv  PrintCapabilities.srv  SetStreaming.srv
camplex/tests/: test_checkerboard_detection.launch  test_checkerboard_registrar.launch
covreg/: CMakeLists.txt  README.md  package.xml
covreg/msg/: CovarianceEstimatorInfo.msg  NeuralNetworkInfo.msg  OptimizerStatus.msg
covreg/nodes/: adaptive_covariance_repeater.cpp  covariance_optimizer.cpp  covariance_repeater.cpp  performance_estimator.cpp  velocity_visualizer.cpp
covreg/scripts/: BagLooper.py  ConstantFeatures.py  EstimateTester.py  FeatureNoise.py  OdometryBoundsPublisher.py  OdometryFeatures.py  OptimizationMonitor.py  PerformanceReader.py  ProbeCovarianceEstimator.py  TwistFeatures.py  UpdateBoundsPublisher.py  VelocityFeatures.py
covreg/src/: AdaptiveCovarianceEstimator.cpp  ClipOptimizer.cpp  CovarianceEstimator.cpp  CovarianceManager.cpp  CovarianceModelLearner.cpp  EstimatorInfoParsers.cpp  InnovationLikelihoodProblem.cpp  KalmanFilterEpisode.cpp  KalmanFilterModules.cpp  PerceptoInterface.cpp  PositiveDefiniteModule.cpp  PositiveDefiniteModules.cpp
covreg/srv/: QueryCovariance.srv
covreg/tests/: TestPrediction.cpp
dispair/: .gitignore  CMakeLists.txt  README.md  package.xml
dispair/cfg/: vo_disparity.cfg
dispair/nodes/: disparity_vo.cpp
dispair/src/: ImageSync.cpp
extrinsics_array/: CMakeLists.txt  README.md  package.xml
extrinsics_array/msg/: ExtrinsicsArrayInfo.msg
extrinsics_array/nodes/: array_lookup_loader.cpp  extrinsics_publisher_node.cpp  transform_repeater_node.cpp
extrinsics_array/src/: ExtrinsicsArray.cpp  ExtrinsicsArrayCalibrationParsers.cpp  ExtrinsicsCalibrationParsers.cpp  ExtrinsicsCommon.cpp  ExtrinsicsInfoManager.cpp  ExtrinsicsInterface.cpp  ExtrinsicsLoader.cpp  LookupInterface.cpp
fiducial_array/: CMakeLists.txt  README.md  package.xml
fiducial_array/msg/: FiducialArrayInfo.msg  FiducialInfo.msg
fiducial_array/nodes/: fiducial_array_param_manager.cpp
fiducial_array/src/: Fiducial.cpp  FiducialArray.cpp  FiducialArrayCalibrationParsers.cpp  FiducialArrayInfoManager.cpp  FiducialCalibrationParsers.cpp  FiducialCommon.cpp  FiducialInfoManager.cpp  PoseEstimation.cpp
fiducial_array/srv/: GetFiducialArrayInfo.srv  SetFiducialArrayInfo.srv
fiducials/: CMakeLists.txt  README.md  package.xml
fiducials/msg/: FiducialInfo.msg
fiducials/nodes/: fiducial_pose_estimator.cpp
fiducials/src/: Fiducial.cpp  FiducialArray.cpp  FiducialCommon.cpp  (+4 more)
fieldtrack/: CMakeLists.txt  README.md  package.xml
graphopt/: CMakeLists.txt  README.md  package.xml
lookup/: CMakeLists.txt  README.md  package.xml  setup.py
manycal/: CMakeLists.txt  README.md  package.xml  test_config.yaml  test_multi.launch  test_tag_list.yaml
odoflow/: CMakeLists.txt  README.md  debug.launch  package.xml  test_camera.launch  test_vo.launch
odoscan/: CMakeLists.txt  README.md  package.xml
(+472 files in other folders)
