<?xml version="1.0"?>
<package>
  <name>atags</name>
  <version>0.1.0</version>
  <description>A package for detecting and decoding AprilTags.</description>

  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>

  <license>AFLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>camplex</build_depend>
  <build_depend>argus_utils</build_depend>
  <build_depend>argus_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>camplex</run_depend>
  <run_depend>argus_utils</run_depend>
  <run_depend>argus_msgs</run_depend>
  
</package>
