<?xml version="1.0"?>
<package>
  <name>camera_array</name>
  <version>0.0.1</version>
  <description>Nodes to launch and manage arrays of cameras.</description>
  
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>
  
  
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>argus_utils</build_depend>
  <build_depend>camplex</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_geometry</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>argus_utils</run_depend>
  <run_depend>camplex</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_geometry</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/camera_array_nodelet.xml" />
  </export>
  
</package>
